src/objects/Account_Insight_Article__c.object
<CustomObject>
    <description>Detail Object that represents an editable article</description>
    <fields>
        <fullName>Article_Text__c</fullName>
        <label>Article Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InsightGroup__c</fullName>
        <label>Account Insight</label>
        <referenceTo>Account_Insight__c</referenceTo>
        <relationshipLabel>Account Insight Articles</relationshipLabel>
        <relationshipName>Account_Insight_Articles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>News_Agency__c</fullName>
        <label>News Agency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Account Insight Article</label>
    <nameField>
        <label>Account Insight Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Insight Articles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>